build: add main script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mwjs",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
     "lint": "eslint src/ --ext .js,.ts",
     "lint:fix": "eslint src/ --fix --ext .js,.ts"
