--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "main": "dist/main.js",
   "scripts": {
     "lint": "eslint src/ --ext .js,.ts",
-    "lint:fix": "eslint src/ --fix --ext .js,.ts"
+    "lint:fix": "eslint src/ --fix --ext .js,.ts",
+	"prepublish": "tsc --declaration"
   },
   "keywords": [],
   "author": "bitomic <alehandro.rzrv@gmail.com>",
   "license": "MIT",
+  "repository": {
+	  "type": "git",
+	  "url": "https://github.com/bitomic/mwjs.git"
+  },
+  "homepage": "https://github.com/bitomic/mwjs#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
     "request": "^2.88.2",
