--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 	  "esModuleInterop": true,
 	  "skipLibCheck": true,
 	  "forceConsistentCasingInFileNames": true,
-	  "typeRoots": [ "./src/types/**" ]
+	  "typeRoots": [ "types/**" ]
 	}
   }
   
