--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint src/ --ext .js,.ts",
     "lint:fix": "eslint src/ --fix --ext .js,.ts",
-    "prepublish": "tsc --declaration"
+    "prepublish": "rimraf dist && tsc --declaration"
   },
   "keywords": [],
   "author": "bitomic <alehandro.rzrv@gmail.com>",
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^4.28.4",
     "eslint": "^7.31.0",
     "husky": "^7.0.1",
+    "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
   }
 }
