--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "prepare": "husky install",
     "prepublish": "rimraf dist && tsc --declaration",
     "prepush": "npm run lint && npm run prepublish",
-    "update:patch": "npm version patch -m \"chore: set version to %s\" && git push origin main && git push --tags && npm publish"
+	"postupdate": "git push origin main && git push --tags && npm publish",
+	"update:major": "git version major -m \"chore: set version to %s\" && npm run postupdate",
+	"update:minor": "git version minor -m \"chore: set version to %s\" && npm run postupdate",
+    "update:patch": "npm version patch -m \"chore: set version to %s\" && npm run postupdate"
   },
   "keywords": [],
   "author": "bitomic <alehandro.rzrv@gmail.com>",
