--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "eslint src/ --ext .js,.ts",
     "lint:fix": "eslint src/ --fix --ext .js,.ts",
     "prepare": "husky install",
-    "prepublish": "rimraf dist && tsc --declaration",
-    "prepush": "npm run lint && npm run prepublish",
-    "postupdate": "git push origin main && git push --tags && npm publish",
+    "prepublish": "exit 1",
+    "prepush": "npm run lint && rimraf dist && tsc --declaration",
+    "postupdate": "git push origin main && git push --tags --no-verify && npm publish -f",
     "update:major": "npm version major -m \"chore: set version to %s\" && npm run postupdate",
     "update:minor": "npm version minor -m \"chore: set version to %s\" && npm run postupdate",
     "update:patch": "npm version patch -m \"chore: set version to %s\" && npm run postupdate"
