--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.1",
   "description": "",
   "main": "dist/main.js",
+  "files": [
+	  "dist/**"
+  ],
   "scripts": {
     "build": "tsc",
     "lint": "eslint src/ --ext .js,.ts",
