feat: upload images

--- a/package.json
+++ b/package.json
@@ -28,11 +28,16 @@
   "homepage": "https://github.com/bitomic/mwjs#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "fs-extra": "^10.0.0",
+    "is-stream": "^2.0.1",
+    "node-fetch": "^2.6.1",
     "request": "^2.88.2",
     "signale": "^1.4.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.12",
     "@types/node": "^16.4.3",
+    "@types/node-fetch": "^2.5.12",
     "@types/request": "^2.48.6",
     "@types/signale": "^1.4.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
