--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/bitomic/mwjs#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "form-data": "^2.5.1",
     "fs-extra": "^10.0.0",
     "is-stream": "^2.0.1",
     "node-fetch": "^2.6.1",
@@ -35,6 +36,7 @@
     "signale": "^1.4.0"
   },
   "devDependencies": {
+    "@types/form-data": "^2.5.0",
     "@types/fs-extra": "^9.0.12",
     "@types/node": "^16.4.3",
     "@types/node-fetch": "^2.5.12",
