--- a/package.json
+++ b/package.json
@@ -30,18 +30,17 @@
     "dotenv": "^10.0.0",
     "form-data": "^2.5.1",
     "fs-extra": "^10.0.0",
-    "is-stream": "^2.0.1",
     "node-fetch": "^2.6.1",
-    "request": "^2.88.2",
-    "signale": "^1.4.0"
+    "signale": "^1.4.0",
+    "tough-cookie": "^2.5.0"
   },
   "devDependencies": {
     "@types/form-data": "^2.5.0",
     "@types/fs-extra": "^9.0.12",
     "@types/node": "^16.4.3",
     "@types/node-fetch": "^2.5.12",
-    "@types/request": "^2.48.6",
     "@types/signale": "^1.4.2",
+    "@types/tough-cookie": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "eslint": "^7.31.0",
