chore(eslint): allow shadowing FormData and Response

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -84,7 +84,7 @@
 		"no-shadow": [
 			"error",
 			{
-				"allow": [ "fetch" ],
+				"allow": [ "fetch", "FormData", "Response" ],
 				"builtinGlobals": true
 			}
 		],
