--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"exclude": [ "node_modules" ],
+	"exclude": [ "_types", "node_modules" ],
 	"compilerOptions": {
 	  "target": "ES2020",
 	  "module": "commonjs",
@@ -9,7 +9,7 @@
 	  "esModuleInterop": true,
 	  "skipLibCheck": true,
 	  "forceConsistentCasingInFileNames": true,
-	  "typeRoots": [ "types/**" ]
+	  "typeRoots": [ "./types/index.d.ts" ]
 	}
   }
   
