--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dist/**",
     "!dist/demo/**"
   ],
+  "types": "./types/**",
   "scripts": {
     "build": "tsc",
     "lint": "eslint src/ --ext .js,.ts",
