--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/main.js",
   "files": [
     "dist/**",
-    "!dist/demo/**"
+    "!dist/demo/**",
+	"types/**"
   ],
   "scripts": {
     "build": "tsc",
