minor: yet another attempt to type this thing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,9 @@
         "@typescript-eslint"
     ],
     "rules": {
+		"@typescript-eslint/no-namespace": [
+			"off"
+		],
 		"array-bracket-spacing": [
 			"error",
 			"always"
