--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"exclude": [ "_types", "node_modules" ],
+	"exclude": [ "node_modules" ],
 	"compilerOptions": {
 	  "target": "ES2020",
 	  "module": "commonjs",
@@ -8,8 +8,7 @@
 	  "strict": true,
 	  "esModuleInterop": true,
 	  "skipLibCheck": true,
-	  "forceConsistentCasingInFileNames": true,
-	  "typeRoots": [ "./types/**" ]
+	  "forceConsistentCasingInFileNames": true
 	}
   }
   
