--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "homepage": "https://github.com/bitomic/mwjs#readme",
   "dependencies": {
-    "dotenv": "^10.0.0",
     "form-data": "^4.0.0",
     "fs-extra": "^10.0.0",
     "node-fetch": "^2.6.1",
@@ -39,14 +38,17 @@
   "devDependencies": {
     "@types/form-data": "^2.5.0",
     "@types/fs-extra": "^9.0.12",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.3",
     "@types/node-fetch": "^2.5.12",
     "@types/signale": "^1.4.2",
     "@types/tough-cookie": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
+    "dotenv": "^10.0.0",
     "eslint": "^7.31.0",
     "husky": "^7.0.1",
+    "mocha": "^9.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
   }
