--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    environment: Test
 
     runs-on: ubuntu-latest
 
@@ -25,3 +26,10 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+
+    - name: Test
+      env:
+        FANDOM_PASSWORD: ${{ secrets.FANDOM_PASSWORD }}
+        FANDOM_USERNAME: ${{ secrets.FANDOM_USERNAME }}
+        FANDOM_WIKI: bitomic
+      run: npm run test
