--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   ],
   "types": "dist/main.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --listEmittedFiles",
     "lint": "eslint src/ --ext .js,.ts",
     "lint:fix": "eslint src/ --fix --ext .js,.ts",
     "prepare": "husky install",
-    "prepush": "npm run lint && rimraf dist && tsc --declaration",
+    "prepush": "npm run lint && rimraf dist && tsc --declaration --listEmittedFiles",
     "postupdate": "git push origin main && git push --tags --no-verify && npm publish -f",
+	"test": "mocha ./dist/tests",
     "update:major": "npm version major -m \"chore: set version to %s\" && npm run postupdate",
     "update:minor": "npm version minor -m \"chore: set version to %s\" && npm run postupdate",
     "update:patch": "npm version patch -m \"chore: set version to %s\" && npm run postupdate"
