chore(package.json): don't publish tests files

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "files": [
     "dist/**",
     "!dist/demo/**",
-    "types/**"
+    "!dist/tests/**"
   ],
   "types": "dist/main.d.ts",
   "scripts": {
