chore(workflows): add wikipedia's environment variables to node's tests workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,8 @@ jobs:
         FANDOM_PASSWORD: ${{ secrets.FANDOM_PASSWORD }}
         FANDOM_USERNAME: ${{ secrets.FANDOM_USERNAME }}
         FANDOM_WIKI: bitomic
+
+        WIKIPEDIA_API: https://es.wikipedia.org/w/api.php
+        WIKIPEDIA_PASSWORD: ${{ secrets.WIKIPEDIA_PASSWORD }}
+        WIKIPEDIA_USERNAME: ${{ secrets.WIKIPEDIA_USERNAME }}
       run: npm run test
