--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "prepush": "npm run lint && npm run build && npm run test",
     "postupdate": "git push origin main && git push --tags --no-verify && npm publish -f",
     "test": "mocha ./dist/tests",
-    "update:major": "npm version major -m \"🔖 Set version to %s\" && npm run postupdate",
-    "update:minor": "npm version minor -m \"🔖 Set version to %s\" && npm run postupdate",
-    "update:patch": "npm version patch -m \"🔖 Set version to %s\" && npm run postupdate"
+    "update:major": "npm version major -m \"chore: set version to %s\" && npm run postupdate",
+    "update:minor": "npm version minor -m \"chore: set version to %s\" && npm run postupdate",
+    "update:patch": "npm version patch -m \"chore: set version to %s\" && npm run postupdate"
   },
   "keywords": [
     "Fandom",
