--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,9 @@
         "@typescript-eslint"
     ],
     "rules": {
+		"@typescript-eslint/no-empty-interface": [
+			"off"
+		],
 		"@typescript-eslint/no-namespace": [
 			"off"
 		],
