chore: update package.json

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "MediaWiki API",
     "wiki"
   ],
-  "author": "bitomic <alehandro.rzrv@gmail.com>",
+  "author": "bitomic",
   "license": "MIT",
   "repository": {
     "type": "git",
