chore: setup husky

--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
   ],
   "types": "dist/main.d.ts",
   "scripts": {
-    "build": "rimraf dist && tsc --declaration --listEmittedFiles",
-    "lint": "eslint src/ --ext .js,.ts",
-    "lint:fix": "eslint src/ --fix --ext .js,.ts",
-    "prepare": "husky install",
-    "prepush": "npm run lint && npm run build && npm run test",
-    "postupdate": "git push origin main && git push --tags --no-verify && npm publish -f",
-    "test": "mocha ./dist/tests",
-    "update:major": "npm version major -m \"chore: set version to %s\" && npm run postupdate",
-    "update:minor": "npm version minor -m \"chore: set version to %s\" && npm run postupdate",
-    "update:patch": "npm version patch -m \"chore: set version to %s\" && npm run postupdate"
+    "build": "yarn tsc --listEmittedFiles --incremental",
+    "rebuil": "rimraf tsconfig.tsbuildinfo dist && yarn tsc --listEmittedFiles --incremental",
+    "lint": "eslint src/ --ext .ts --cache",
+    "lint:fix": "eslint src/ --fix --ext .ts --cache",
+    "prepare": "husky install .github/husky",
+    "test": "mocha ./dist/tests"
   },
   "keywords": [
     "Fandom",
@@ -54,6 +50,7 @@
     "dotenv": "11.0.0",
     "eslint": "8.6.0",
     "husky": "7.0.4",
+    "lint-staged": "^12.1.7",
     "mocha": "9.1.3",
     "rimraf": "3.0.2",
     "typescript": "4.5.4"
