--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,36 @@
 {
-	"exclude": [ "node_modules" ],
+	"exclude": [ "dist", "node_modules" ],
+	"include": [ "src" ],
 	"compilerOptions": {
-	  "target": "ES2020",
-	  "module": "commonjs",
-	  "outDir": "./dist",
-	  "rootDir": "./src",
-	  "strict": true,
-	  "esModuleInterop": true,
-	  "skipLibCheck": true,
-	  "forceConsistentCasingInFileNames": true
+		"module": "CommonJS",
+		"target": "ES6",
+		"skipLibCheck": true,
+		"strict": true,
+
+		/* Paths */
+		"outDir": "./dist",
+		"rootDir": "./src",
+
+		/* The "No" Corner */
+		"noImplicitAny": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+
+		/* Strict */
+		"strictBindCallApply": true,
+		"strictFunctionTypes": true,
+		"strictNullChecks": true,
+		"strictPropertyInitialization": true,
+		"useUnknownInCatchVariables": true,
+
+		/* Other settings */
+		"esModuleInterop": true,
+		"exactOptionalPropertyTypes": true,
+		"experimentalDecorators": true,
+		"forceConsistentCasingInFileNames": true
 	}
-  }
-  
+}
