--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,49 +1,86 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
-		"@typescript-eslint/no-empty-interface": [
-			"off"
+	"env": {
+		"browser": true,
+		"es2021": true
+	},
+	"extends": [
+		"eslint:recommended",
+		"plugin:@typescript-eslint/recommended",
+		"plugin:@typescript-eslint/recommended-requiring-type-checking"
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaVersion": 12,
+		"project": "./tsconfig.json",
+		"sourceType": "module"
+	},
+	"plugins": [
+		"@typescript-eslint"
+	],
+	"rules": {
+		"@typescript-eslint/array-type": [
+			"error",
+			{
+				"default": "array-simple",
+				"readonly": "array-simple"
+			}
 		],
-		"@typescript-eslint/no-namespace": [
-			"off"
+		"@typescript-eslint/await-thenable": "error",
+		"@typescript-eslint/consistent-type-assertions": "error",
+		"@typescript-eslint/consistent-type-definitions": "error",
+		"@typescript-eslint/consistent-type-imports": "error",
+		"@typescript-eslint/explicit-member-accessibility": "error",
+		"@typescript-eslint/no-base-to-string": "error",
+		"@typescript-eslint/no-confusing-non-null-assertion": "error",
+		"@typescript-eslint/no-dynamic-delete": "error",
+		"@typescript-eslint/no-floating-promises": "error",
+		"@typescript-eslint/no-unnecessary-condition": "error",
+		"@typescript-eslint/no-unused-vars": "off",
+		"@typescript-eslint/prefer-includes": "error",
+		"@typescript-eslint/prefer-optional-chain": "error",
+		"@typescript-eslint/require-await": "off",
+		"@typescript-eslint/prefer-return-this-type": "error",
+		"@typescript-eslint/restrict-template-expressions": "off",
+		"array-bracket-newline": [
+			"error",
+			{
+				"minItems": 2,
+				"multiline": true
+			}
 		],
 		"array-bracket-spacing": [
 			"error",
 			"always"
 		],
-		"arrow-body-style": [
-			"error",
-			"as-needed"
-		],
+		"arrow-body-style": "error",
 		"arrow-parens": [
 			"error",
 			"as-needed"
 		],
-		"arrow-spacing": [
-			"error"
-		],
+		"arrow-spacing": "error",
+		"block-spacing": "error",
 		"brace-style": [
 			"error",
-			"1tbs"
+			"1tbs",
+			{
+				"allowSingleLine": true
+			}
 		],
-		"class-methods-use-this": [
-			"error"
+		"comma-spacing": "error",
+		"computed-property-spacing": [
+			"error",
+			"always"
 		],
+		"consistent-return": "error",
+		"curly": [
+			"error",
+			"multi-line"
+		],
+		"dot-location": [
+			"error",
+			"property"
+		],
+		"dot-notation": "error",
 		"eol-last": [
 			"error",
 			"always"
@@ -52,100 +89,66 @@
 			"error",
 			"always"
 		],
-		"grouped-accessor-pairs": [
-			"error"
+		"indent": [
+			"error",
+			"tab"
 		],
-        "indent": [
-            "error",
-            "tab"
-        ],
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
-		"newline-per-chained-call": [
-			"error"
+		"key-spacing": "error",
+		"keyword-spacing": "error",
+		"linebreak-style": [
+			"error",
+			"windows"
 		],
-		"no-console": [
-			"error"
+		"max-classes-per-file": [
+			"error",
+			1
 		],
-		"no-inline-comments": [
-			"error"
-		],
-		"no-multi-assign": [
-			"error"
-		],
-		"no-multi-spaces": [
-			"error"
-		],
-		"no-multiple-empty-lines": [
-			"error"
-		],
-		"no-nested-ternary": [
-			"error"
-		],
-		"no-return-await": [
-			"error"
-		],
-		"no-trailing-spaces": [
-			"error"
-		],
-		"no-useless-constructor": [
-			"error"
-		],
-		"no-var": [
-			"error"
-		],
-		"no-whitespace-before-property": [
-			"error"
-		],
-		"object-curly-newline": [
+		"new-parens": [
 			"error",
 			"always"
 		],
+		"newline-per-chained-call": "error",
+		"no-console": "off",
+		"no-constructor-return": "error",
+		"no-extra-parens": "error",
+		"no-multiple-empty-lines": "error",
+		"no-nested-ternary": "error",
+		"no-return-await": "error",
+		"no-template-curly-in-string": "error",
+		"no-trailing-spaces": "error",
+		"no-unsafe-optional-chaining": "error",
+		"no-var": "error",
 		"object-curly-spacing": [
 			"error",
 			"always"
 		],
-		"object-shorthand": [
+		"prefer-arrow-callback": "error",
+		"prefer-const": "error",
+		"prefer-destructuring": "error",
+		"prefer-rest-params": "error",
+		"prefer-spread": "error",
+		"prefer-template": "error",
+		"quotes": [
+			"error",
+			"single"
+		],
+		"radix": [
 			"error",
 			"always"
 		],
-		"prefer-arrow-callback": [
-			"error"
+		"require-await": "error",
+		"semi": [
+			"error",
+			"never"
 		],
-		"prefer-const": [
-			"error"
-		],
-		"prefer-destructuring": [
-			"error"
-		],
-		"prefer-template": [
-			"error"
-		],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "never"
-        ],
 		"sort-imports": [
-			"error"
-		],
-		"sort-keys": [
-			"error"
-		],
-		"space-before-blocks": [
 			"error",
-			"always"
+			{
+				"ignoreCase": true
+			}
 		],
+		"sort-keys": "error",
 		"space-in-parens": [
-			"error",
-			"always"
-		],
-		"spaced-comment": [
 			"error",
 			"always"
 		],
@@ -153,5 +156,5 @@
 			"error",
 			"always"
 		]
-    }
+	}
 }
