--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,8 +22,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+    - run: npm i -g yarn
+    - run: yarn install
+    - run: yarn build
 
     - env:
         FANDOM_PASSWORD: ${{ secrets.FANDOM_PASSWORD }}
@@ -33,4 +34,4 @@ jobs:
         WIKIPEDIA_API: https://es.wikipedia.org/w/api.php
         WIKIPEDIA_PASSWORD: ${{ secrets.WIKIPEDIA_PASSWORD }}
         WIKIPEDIA_USERNAME: ${{ secrets.WIKIPEDIA_USERNAME }}
-      run: npm run test
+      run: yarn test
