chore(deps): remove node-fetch, add undici

--- a/package.json
+++ b/package.json
@@ -33,16 +33,15 @@
   "dependencies": {
     "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
-    "node-fetch": "2.6.7",
     "tmp-promise": "^3.0.3",
-    "tough-cookie": "^4.0.0"
+    "tough-cookie": "^4.0.0",
+    "undici": "^5.5.1"
   },
   "devDependencies": {
     "@types/form-data": "2.5.0",
     "@types/fs-extra": "9.0.13",
     "@types/mocha": "9.1.1",
     "@types/node": "16.11.41",
-    "@types/node-fetch": "2.6.2",
     "@types/tough-cookie": "4.0.2",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
