--- a/package.json
+++ b/package.json
@@ -31,11 +31,9 @@
   },
   "homepage": "https://github.com/bitomic/mwjs#readme",
   "dependencies": {
-    "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
     "tmp-promise": "^3.0.3",
-    "tough-cookie": "^4.0.0",
-    "undici": "^5.5.1"
+    "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
     "@types/form-data": "2.5.0",
