--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   "dependencies": {
     "fs-extra": "^10.1.0",
     "tmp-promise": "^3.0.3",
-    "tough-cookie": "^4.0.0",
-    "undici": "^5.5.1"
+    "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
     "@types/form-data": "2.5.0",
