--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
 		"@typescript-eslint/no-base-to-string": "error",
 		"@typescript-eslint/no-confusing-non-null-assertion": "error",
 		"@typescript-eslint/no-dynamic-delete": "error",
+		"@typescript-eslint/no-empty-interface": "off",
 		"@typescript-eslint/no-floating-promises": "error",
 		"@typescript-eslint/no-unnecessary-condition": "error",
 		"@typescript-eslint/no-unused-vars": "off",
