--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "!dist/demo/**",
     "!dist/tests/**"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/main.mjs",
+      "require": "./dist/main.js"
+    }
+  },
   "types": "dist/main.d.ts",
   "scripts": {
     "build": "yarn tsc --listEmittedFiles --incremental",
@@ -33,7 +39,8 @@
   "dependencies": {
     "fs-extra": "^10.1.0",
     "tmp-promise": "^3.0.3",
-    "tough-cookie": "^4.0.0"
+    "tough-cookie": "^4.0.0",
+    "undici": "^5.9.1"
   },
   "devDependencies": {
     "@types/form-data": "2.5.0",
@@ -49,6 +56,7 @@
     "lint-staged": "^13.0.3",
     "mocha": "10.0.0",
     "rimraf": "3.0.2",
+    "tsup": "^6.2.2",
     "typescript": "4.7.4"
   },
   "packageManager": "yarn@3.2.1"
