--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mw.js",
-  "version": "2.4.1",
+  "version": "3.0.0",
   "description": "Typed MediaWiki API client for node.js using TypeScript.",
   "main": "dist/main.js",
   "files": [
@@ -8,6 +8,12 @@
     "!dist/demo/**",
     "!dist/tests/**"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/main.mjs",
+      "require": "./dist/main.js"
+    }
+  },
   "types": "dist/main.d.ts",
   "scripts": {
     "build": "yarn tsc --listEmittedFiles --incremental",
@@ -31,18 +37,16 @@
   },
   "homepage": "https://github.com/bitomic/mwjs#readme",
   "dependencies": {
-    "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
-    "node-fetch": "2.6.7",
     "tmp-promise": "^3.0.3",
-    "tough-cookie": "^4.0.0"
+    "tough-cookie": "^4.0.0",
+    "undici": "^5.9.1"
   },
   "devDependencies": {
     "@types/form-data": "2.5.0",
     "@types/fs-extra": "9.0.13",
     "@types/mocha": "9.1.1",
     "@types/node": "16.11.47",
-    "@types/node-fetch": "2.6.2",
     "@types/tough-cookie": "4.0.2",
     "@typescript-eslint/eslint-plugin": "5.32.0",
     "@typescript-eslint/parser": "5.32.0",
@@ -52,6 +56,7 @@
     "lint-staged": "^13.0.3",
     "mocha": "10.0.0",
     "rimraf": "3.0.2",
+    "tsup": "^6.2.2",
     "typescript": "4.7.4"
   },
   "packageManager": "yarn@3.2.2"
