--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lint-staged": "^13.0.3",
     "mocha": "10.0.0",
     "rimraf": "3.0.2",
+    "ts-dotenv": "^0.8.3",
     "tsup": "^6.2.3",
     "typescript": "4.8.4"
   },
