--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wikiscript/core",
+  "name": "@quority/core",
   "version": "4.0.0-rc.0",
   "description": "Typed MediaWiki API client for node.js using TypeScript.",
   "main": "dist/main.js",
@@ -61,5 +61,8 @@
     "tsup": "^6.6.3",
     "typescript": "^4.9.5"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.2.4",
+  "publishConfig": {
+    "access": "public"
+  }
 }
