--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mw.js",
-  "version": "3.1.0",
+  "name": "@quority/core",
+  "version": "4.0.1",
   "description": "Typed MediaWiki API client for node.js using TypeScript.",
   "main": "dist/main.js",
   "files": [
@@ -33,23 +33,24 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bitomic/mwjs.git"
+    "url": "https://github.com/quority/core.git"
   },
-  "homepage": "https://github.com/bitomic/mwjs#readme",
+  "homepage": "https://github.com/quority/core#readme",
   "dependencies": {
+    "@sapphire/shapeshift": "^3.8.1",
     "fs-extra": "^10.1.0",
-    "tmp-promise": "^3.0.3",
     "tough-cookie": "^4.1.2",
     "undici": "^5.12.0"
   },
   "devDependencies": {
+    "@bitomic/eslint-config": "^1.2.0",
     "@types/form-data": "2.5.0",
     "@types/fs-extra": "9.0.13",
     "@types/mocha": "10.0.0",
     "@types/node": "18.11.9",
     "@types/tough-cookie": "4.0.2",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
     "dotenv": "16.0.3",
     "eslint": "8.27.0",
     "husky": "8.0.2",
@@ -57,8 +58,11 @@
     "mocha": "10.1.0",
     "rimraf": "3.0.2",
     "ts-dotenv": "^0.9.0",
-    "tsup": "^6.5.0",
-    "typescript": "4.8.4"
+    "tsup": "^6.6.3",
+    "typescript": "^4.9.5"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.2.4",
+  "publishConfig": {
+    "access": "public"
+  }
 }
